# strands-robots

./: .gitignore  README.md  __init__.py  pyproject.toml  robot.py  test.py
.github/workflows/: pypi-publish-on-release.yml
policies/: __init__.py
policies/groot/: __init__.py  client.py  data_config.py
strands_robots/: __init__.py  robot.py
strands_robots/policies/: __init__.py
strands_robots/policies/groot/: __init__.py  client.py  data_config.py
strands_robots/tools/: __init__.py  gr00t_inference.py  lerobot_calibrate.py  lerobot_camera.py  lerobot_teleoperate.py  pose_tool.py  serial_tool.py
tools/: gr00t_inference.py  lerobot_camera.py  serial_tool.py
